[package]
name = "sample-plugin"
edition = "2021"
version = "0.1.0"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = { version = "1.0.0", optional = true }
anyhow = "1.0.58"
rand = "0.8.5"
vapoursynth = { path = "../vapoursynth" }

[[bin]]
name = "test"
required-features = [
    "cfg-if",
    "vapoursynth/vapoursynth-functions",
    "vapoursynth/vsscript-functions",
]
