[package]
name = "vapoursynth"
version = "0.1.0" # remember to update html_root_url
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
description = "Safe Rust wrapper for VapourSynth and VSScript."
license = "MIT/Apache-2.0"

readme = "README.md"
documentation = "https://docs.rs/vapoursynth"
repository = "https://github.com/YaLTeR/vapoursynth-rs"
keywords = ["vapoursynth", "vsscript", "video", "bindings"]
categories = ["api-bindings", "external-ffi-bindings", "multimedia::video"]

[badges]
travis-ci = { repository = "YaLTeR/vapoursynth-rs" }
appveyor = { repository = "YaLTeR/vapoursynth-rs" }

[dependencies]
bitflags = "1"
failure = "0.1"
failure_derive = "0.1"
vapoursynth-sys = { version = "0.1", path = "../vapoursynth-sys" }

[dev-dependencies]
clap = "2"
lazy_static = "1"
num-rational = { version = "0.1", default-features = false }

[target.'cfg(not(feature = "gte-vsscript-api-32"))'.dependencies]
lazy_static = "1"

[features]
# Features for enabling higher API versions.
vapoursynth-api-31 = [
    "vapoursynth-sys/vapoursynth-api-31",
    "gte-vapoursynth-api-31"
]
vapoursynth-api-32 = [
    "vapoursynth-sys/vapoursynth-api-32",
    "gte-vapoursynth-api-31",
    "gte-vapoursynth-api-32"
]
vapoursynth-api-33 = [
    "vapoursynth-sys/vapoursynth-api-33",
    "gte-vapoursynth-api-31",
    "gte-vapoursynth-api-32",
    "gte-vapoursynth-api-33"
]
vapoursynth-api-34 = [
    "vapoursynth-sys/vapoursynth-api-34",
    "gte-vapoursynth-api-31",
    "gte-vapoursynth-api-32",
    "gte-vapoursynth-api-33",
    "gte-vapoursynth-api-34"
]
vapoursynth-api-35 = [
    "vapoursynth-sys/vapoursynth-api-35",
    "gte-vapoursynth-api-31",
    "gte-vapoursynth-api-32",
    "gte-vapoursynth-api-33",
    "gte-vapoursynth-api-34",
    "gte-vapoursynth-api-35"
]

vsscript-api-31 = [
    "vapoursynth-sys/vsscript-api-31",
    "gte-vsscript-api-31"
]
vsscript-api-32 = [
    "vapoursynth-sys/vsscript-api-32",
    "gte-vsscript-api-31",
    "gte-vsscript-api-32"
]

# Features for linking to certain functions.
vapoursynth-functions = ["vapoursynth-sys/vapoursynth-functions"]
vsscript-functions = ["vapoursynth-sys/vsscript-functions"]

# Utility features, not for outside use.
gte-vapoursynth-api-31 = []
gte-vapoursynth-api-32 = []
gte-vapoursynth-api-33 = []
gte-vapoursynth-api-34 = []
gte-vapoursynth-api-35 = []

gte-vsscript-api-31 = []
gte-vsscript-api-32 = []

# For development.
#default = ["vapoursynth-api-35", "vsscript-api-32", "vapoursynth-functions", "vsscript-functions"]

[package.metadata.docs.rs]
features = ["vapoursynth-api-35", "vsscript-api-32", "vapoursynth-functions", "vsscript-functions"]
